# hector_quadrotor_navigation

./: .gitignore  .gitmodules  LICENSE  README.md  setup.sh
src/hector_moveit_navigation/: CMakeLists.txt  package.xml
src/hector_moveit_navigation/config/: hector_moveit_navigation.yaml
src/hector_moveit_navigation/include/hector_moveit_navigation/: hector_navigation.h  hector_navigation_params.h
src/hector_moveit_navigation/node/: hector_navigation_node.cpp
src/hector_moveit_navigation/src/: hector_navigation.cpp  hector_navigation_params.cpp
src/hector_navigation/: CMakeLists.txt  package.xml
src/hector_navigation/config/: hector_navigation.yaml
src/hector_navigation/include/hector_navigation/: hector_navigation.h  hector_navigation_params.h
src/hector_navigation/node/: hector_navigation_node.cpp
src/hector_navigation/src/: hector_navigation.cpp  hector_navigation_params.cpp
src/hector_navigation_controllers/: CMakeLists.txt  package.xml  plugin.xml
src/hector_navigation_controllers/include/hector_navigation_controllers/: waypoint_handle.h  waypoint_handle_impl.h
src/hector_navigation_controllers/launch/: actions.launch  waypoint_controller.launch
src/hector_navigation_controllers/params/: params.yaml  waypoint_controller.yaml
src/hector_navigation_controllers/src/: follow_trajectory_action.cpp  waypoint_action.cpp  waypoint_controller.cpp
src/hector_navigation_msgs/: CMakeLists.txt  package.xml
src/hector_navigation_msgs/action/: FollowTrajectory.action  Waypoint.action
src/hector_navigation_msgs/msg/: Waypoint.msg
src/hector_navigation_msgs/srv/: Navigation.srv  Takeoff.srv
src/hector_navigation_simulation/: CMakeLists.txt  package.xml
src/hector_navigation_simulation/config/: navigation.rviz
src/hector_navigation_simulation/launch/: empty_world_navigation.launch  hector_navigation.launch  spawn_quadrotor.launch  spawn_quadrotor_with_two_cams.launch
src/hector_navigation_simulation/urdf/: quadrotor_two_cams.gazebo.xacro  quadrotor_two_cams.urdf.xacro
